@@ -1,6 +1,9 @@
 #!/bin/sh
 #
 # $Log$
+# Revision 1.3  2004/05/14 21:16:46  jimmyo
+# "Upped" som plugins from contrib/manual to auto.
+#
 # Revision 1.2  2004/05/14 20:32:06  jimmyo
 # Improved autoconf mechanism
 #
@@ -8,7 +11,7 @@
 # Added plugin acpi, contributed by Alexandre Dupouy.
 #
 #
-#%# family=contrib
+#%# family=auto
 #%# capabilities=autoconf
 
 if [ "$1" = "autoconf" ]; then
