@@ -1,8 +1,9 @@
-munin (1.1.1)
+munin (1.1.0)
 
   * Bug regarding logo namechange from logo.gif to logo.png, when installing.
   * Allow/deny in munin-node can now be configured per plugin, in addition
     to "globally" for the whole node.
+  * "Upped" som plugins from contrib/manual to auto.
 
 munin (1.0.0pre4)
 
